Unsuccessfully tried to fix void lava spring not spawning